# LexEval

./: .gitignore  generate_bench_data.py  pyproject.toml
